--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "collectCoverage": true,
     "coverageReporters": [
       "html"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +23,7 @@
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
     "autoprefixer": "^10.4.15",
-    "axios": "^1.5.0",
+    "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.2",
     "css-loader": "^6.8.1",
@@ -44,6 +45,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "lodash": "^4.17.21"
+    "jsdom": "^24.1.0",
+    "jsdom-global": "^3.0.2",
+    "lodash": "^4.17.21",
+    "text-encoding": "^0.7.0",
+    "util": "^0.12.5"
   }
 }
